# pjsekai-background-gen-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  page.yml
crates/cli/: Cargo.toml
crates/cli/src/: console.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  lib.rs
crates/core/tests/: main_test.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: image.rs  lib.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  worker.ts
