[workspace]
members = ["./crates/cli", "./crates/core", "./crates/wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
image = "0.24.7"
pjsekai-background-gen-core = { path = "./crates/core" }
once_cell = "1.18.0"
