[package]
name = "pjsekai-background-gen"
version.workspace = true
edition.workspace = true

[dependencies]
console = "0.15.7"
enable-ansi-support = "0.2.1"
fs-err = "2.9.0"
getopts = "0.2.21"
image.workspace = true
pjsekai-background-gen-core.workspace = true
once_cell.workspace = true
regex = "1.9.6"
