[package]
name = "pjsekai-background-gen-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "1.0.0"
image.workspace = true
pjsekai-background-gen-core.workspace = true
wasm-bindgen = "0.2.87"
